--- a/WPFSampleApp/MainWindow.xaml
+++ b/WPFSampleApp/MainWindow.xaml
@@ -5,9 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFSampleApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="750" Width="800">
     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
         <Button Content="Дай Пет" Click="Button_Click" Margin="10"/>
         <Button Content="Render Barcode Image" Click="Button_Click_1" Margin="10"/>
+
+        <local:Sunburst Width="250" Height="250" />        
     </StackPanel>
 </Window>
